--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- ✅ Facebook Preview Info -->
   <meta property="og:title" content="MY New Video Coming" />
   <meta property="og:description" content="CLick and see more videos" />
-  <meta property="og:image" content="https://jesicarose.github.io/preview-landing/preview.jpg" />
-  <meta property="og:url" content="https://jesicarose.github.io/preview-landing/" />
+  <meta property="og:image" content="https://JesicaRose24.github.io/preview-landing/preview.jpg" />
+  <meta property="og:url" content="https://JesicaRose24.github.io/preview-landing/" />
   <meta property="og:type" content="website" />
 
   <!-- ✅ Redirects to your main link -->
