--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🔔 নতুন কিছু আসছে!</title>
+  <title>Jesica Rose - অফার চলছে!</title>
 
-  <!-- ✅ Facebook Preview Info -->
-  <meta property="og:title" content="MY New Video Coming" />
-  <meta property="og:description" content="CLick and see more videos" />
-  <meta property="og:image" content="https://JesicaRose24.github.io/preview-landing/preview.jpg" />
-  <meta property="og:url" content="https://JesicaRose24.github.io/preview-landing/" />
+  <!-- Facebook / Messenger preview -->
+  <meta property="og:title" content="Jesica Rose - বিশেষ কিছু আপনার জন্য 🎁" />
+  <meta property="og:description" content="চমকপ্রদ অফার চলছে — বিস্তারিত জানতে এখনই ক্লিক করুন!" />
+  <meta property="og:image" content="https://jesicarose24.github.io/Jesica-Rose/preview.jpg" />
+  <meta property="og:url" content="https://jesicarose24.github.io/Jesica-Rose/" />
   <meta property="og:type" content="website" />
 
-  <!-- ✅ Redirects to your main link -->
+  <!-- Instant redirect -->
   <meta http-equiv="refresh" content="0; url=https://t.co/PEOWxOas3x" />
 </head>
 <body>
-  <p>Redirecting...</p>
+  <p>Redirecting to offer...</p>
 </body>
 </html>
